# fewshot-bert-ensemble-hatespeech

./: .gitignore  LICENSE  README.md  augment_data.py  data_loader.py  ensemble.py  evaluate.py  generate_article_plots.py  generate_tables.py  main.py  pyproject.toml  run_experiment.sh  statistical_tests.py  train.py  utils.py
augment/: __init__.py  cluster.py  filter.py  generator.py  similarity.py  templates.py
data/: davidson_raw.csv  test.csv  train_augmented.csv
results/: GroNLP_hateBERT_classification_report.txt  GroNLP_hateBERT_metrics.json  GroNLP_hateBERT_predictions.csv  GroNLP_hateBERT_training_meta.json  all_metrics.json  all_training_meta.json  bert-base-uncased_classification_report.txt  bert-base-uncased_metrics.json  bert-base-uncased_predictions.csv  bert-base-uncased_training_meta.json  comparison_table.csv  hate_speech_table.csv  hate_speech_table.tex  main_table.csv  main_table.tex  roberta-base_classification_report.txt  roberta-base_metrics.json  roberta-base_predictions.csv  roberta-base_training_meta.json  train_augmented_log.txt  train_hatebert_reg_log.txt  train_log.txt
results/all_predictions/: scenario_A_GroNLP_hateBERT_predictions.csv  scenario_A_roberta-base_predictions.csv  scenario_B_ensemble_hard_predictions.csv  scenario_B_ensemble_soft_predictions.csv  scenario_C_bert-base-uncased_predictions.csv  scenario_C_ensemble_soft_predictions.csv  statistical_summary.json  wilcoxon_tests.csv
results/scenario_A/: GroNLP_hateBERT_classification_report.txt  GroNLP_hateBERT_metrics.json  GroNLP_hateBERT_training_meta.json  all_metrics.json  (+9 more)
(+45 files in other folders)
