[project]
name = "fewshot-bert-ensemble-hatespeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "imbalanced-learn>=0.14.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.11.0",
]
